examples/test/testpolicy17587.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17587
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key10: value19
      key13: value12
      key19: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value32
          key15: value37
          key37: value34
